# 2023-11-gpu-bvh

./: Cargo.toml  README.md  TODO.md
examples/: imgconvert.rs  irradiance.rs
resources/: background.hdr  background.hdr.irradiance.exr
src/: bvh.wgsl  draw.wgsl  irradiance.wgsl  lib.rs  main.rs
