[package]
name = "bvh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
pollster = "0.3.0"
rayon = "1.8.0"
wgpu = {version = "0.18.0"}
winit = {version = "0.29", features = ["rwh_05"]}
zerocopy = "0.7.25"
zerocopy-derive = "0.7.25"
