[package]
name = "bvh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
pollster = "0.3.0"
rand = "0.8.5"
rayon = "1.8.0"
wgpu = { version = "24" }
winit = { version = "0.30" }
zerocopy = "0.7.25"
zerocopy-derive = "0.7.25"

[profile.release]
debug = true
